fix layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,3 +55,7 @@
     background-color: transparent;
     border: none;
 }
+
+.over {
+    overflow: hidden;
+}
